--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
     <a href="#">Contact</a>
 </div>
 
-<div class="wrapper">
+<div id="mainDiv" class="wrapper">
     <!-- Sidebar  -->
 
     <!-- Page Content  -->
@@ -37,6 +37,7 @@
     <div id="content">
         test
     </div>
+    <div id="footer" class="footer">2020</div>
 </div>
 <script>
     function openNav() {
