--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
+<head lang="en" >
     <meta charset="UTF-8"/>
     <title>ReactJS + Spring Data REST</title>
     <link rel="stylesheet" href="/main.css" />
 </head>
 <body>
-
+<p>MAM CIE CHUJU XDDDDD</p>
 <div id="react"></div>
 
-<script src="built/bundle.js"></script>
+<script src="./src/main/resources/static/built/bundle.js"></script>
 
 </body>
 </html>
