SUPER IMPORTANT SAVE - LAST WORKING STATE WITH JEDRZEJ APPS TEMPLATE

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,10 +5,9 @@
     <title>ReactJS + Spring Data REST</title>
 </head>
 <body>
-<p>MAM CIE CHUJU XDDDDD</p>
-<div id="react"></div>
+<div id="app"></div>
 
-<script src="built/bundle.js"></script>
 
 </body>
+<script src="built/bundle.js"></script>
 </html>
